# measure-clocks3

./: Cargo.toml  detect-cpu-details.sh  parse-results.py  run-measurement.sh
results/: Darwin-Apple_M4_Max-2025-12-07_21-48-59.txt  Darwin-Apple_M4_Max-2025-12-07_22-30-09.txt  Linux-Intel(R)_Xeon(R)_Gold_6152_CPU_@_2.10GHz-2025-12-07_22-20-48.txt
results-summaries/: Darwin-Apple_M4_Max-2025-12-07_22-30-09.txt  Linux-Intel(R)_Xeon(R)_Gold_6152_CPU_@_2.10GHz-2025-12-07_22-20-48.txt
src/: main.rs
